--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,13 @@ services:
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     environment:
-        - DB_HOST=db
-        - DB_NAME=miodonto_db
-        - DB_USER=miodonto_user
-        - DB_PASS=miodonto_psw
+      - DB_HOST=db
+      - DB_NAME=miodonto_db
+      - DB_USER=miodonto_user
+      - DB_PASS=miodonto_psw
     depends_on:
-        - db
+      db:
+        condition: service_healthy
 
   db:
     image: postgres:13-alpine
@@ -30,7 +31,11 @@ services:
       - POSTGRES_DB=miodonto_db
       - POSTGRES_USER=miodonto_user
       - POSTGRES_PASSWORD=miodonto_psw
-
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U miodonto_user -d miodonto_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   dev-db-data:
